--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Schedule</title>
+    <meta charset="utf-8">
+    <title>Schedule for TechCon 2024</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Schedule for TechCon 2024</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="register.html">Register</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <table>
+            <caption>Detailed Schedule of Events for TechCon 2024</caption>
+            <thead>
+                <tr>
+                    <th scope="col">Time</th>
+                    <th scope="col">Session</th>
+                    <th scope="col">Speaker</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>09:00 AM - 10:00 AM</td>
+                    <td>Opening Keynote</td>
+                    <td>Dr. Ada Smith</td>
+                </tr>
+                <tr>
+                    <td>10:15 AM - 11:15 AM</td>
+                    <td>The Future of AI</td>
+                    <td>Elijah Tan</td>
+                </tr>
+                <tr>
+                    <td>11:30 AM - 12:30 PM</td>
+                    <td>Cybersecurity Today</td>
+                    <td>Lina Rodriguez</td>
+                </tr>
+                <tr>
+                    <td>02:00 PM - 03:00 PM</td>
+                    <td>Developer Tools Showcase</td>
+                    <td>Open Source Panel</td>
+                </tr>
+                <tr>
+                    <td>03:30 PM - 04:30 PM</td>
+                    <td>Startups in 2024</td>
+                    <td>Innovators Roundtable</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
+
+    <footer>
+        <p>Copyright 2024 TechCon. All rights reserved.</p>
+    </footer>
 </body>
 </html>
