--- a/techcon_website/about.html
+++ b/techcon_website/about.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>About TechCon 2024</title>
+    <title>"About TechCon 2024"</title>
 </head>
 <body>
     <header>
-        <h1>About TechCon 2024</h1>
+        <h1>"About TechCon 2024"</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
