--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -16,7 +16,7 @@
             </ul>
         </nav>
     </header>
-
+    <p>"<main>", "<table>", " "</p>
     <main>
         <table>
             <caption>Detailed Schedule of Events for TechCon 2024</caption>
