--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -58,6 +58,7 @@
     </main>
 
     <footer>
+        <p>"copyright"</p>
         <p>Copyright 2024 TechCon. All rights reserved.</p>
     </footer>
 </body>
